Made index more fun

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Goku-kun</title>
+    <style>
+        body {
+            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+            -webkit-user-select: none;
+        }
+        div.center {
+            margin: 0 auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            height: 30%;
+            width: 40%;
+            background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+            border-radius: 2em;
+            box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 1);
+        }
+        p.text {
+            margin: 0 auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            font-size: 3em;
+            color: whitesmoke;
+            font-family: Comfortaa;
+        }
+    </style>
+</head>
+<body>
+    <div class="center">
+        <p class="text">Hello, World!</p>
+    </div>
+</body>
+</html>
